Added cannon hopper block

--- a/common/src/main/resources/assets/createbigcannons/lang/ru_ru.json
+++ b/common/src/main/resources/assets/createbigcannons/lang/ru_ru.json
@@ -67,6 +67,7 @@
 "block.createbigcannons.cannon_drill": "Пушечная дрель",
 "block.createbigcannons.cannon_drill_bit": "Пушечное сверло",
 "block.createbigcannons.cannon_end_cast_mould": "Литейная форма конца пушки",
+"block.createbigcannons.cannon_hopper": "Пушечная воронка",
 "block.createbigcannons.cannon_loader": "Пушечный заряжатель",
 "block.createbigcannons.cannon_mount": "Крепление пушки",
 "block.createbigcannons.cast_iron_autocannon_barrel": "Дуло Чугунной автоматической пушки",
